--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -20,6 +20,7 @@ jobs:
         wget https://github.com/duckdb/duckdb/releases/download/v1.0.0/duckdb_cli-linux-amd64.zip
         unzip duckdb_cli-linux-amd64.zip
         chmod +x duckdb
+        ./duckdb -c "PRAGMA platform;"
 
     - name: Fetch extensions
       if: ${{ inputs.extension_name == '' }}
