--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/download-artifact@v3
       if: ${{ inputs.extension_name != '' }}
       with:
-        name: ${{ inputs.extension_name }}-v1.0.0-extension-linux_amd64
+        name: ${{ inputs.extension_name }}-v1.0.0-extension-linux_amd64_gcc4
         path: build/downloaded
 
     - name: Install downloaded extension
