--- a/.github/workflows/_extension_deploy.yml
+++ b/.github/workflows/_extension_deploy.yml
@@ -100,8 +100,14 @@ jobs:
 
       - name: Checkout DuckDB to version
         run: |
-          cd duckdb
-          git checkout ${{ inputs.duckdb_version }}
+          rm -rf duckdb
+
+      - uses: actions/checkout@v3
+        with:
+          repository: 'duckdb/duckdb'
+          ref: ${{ inputs.duckdb_version }}
+          path: duckdb
+          fetch-depth: 0
 
       - uses: actions/download-artifact@v2
         with:
